--- a/src/app/changepassword/changepassword.component.html
+++ b/src/app/changepassword/changepassword.component.html
@@ -1,21 +1,39 @@
 <div class="container">
   <div class="row">
-    <img src="images-master/delete-profile.png" class="img-responsive" id="header" alt="Startseite">
+    <img src="images-master/change-password.png" class="img-responsive" id="header" alt="Startseite">
   </div>
 </div>
-<p id="PasswortAendern">PROFIL LÖSCHEN</p>
+<p id="PasswortAendern">PASSWORT ÄNDERN</p>
 <form class="form-horizontal">
-  <!--Eingabefeld Passwort-->
+  <!--Eingabefeld aktuelles Passwort-->
   <div align="center">
     <div class="form-group">
-      <label for="password" class="col-sm-4 control-label" id="Label1">PASSWORT* </label>
+      <label for="password" class="col-sm-4 control-label" id="Label1">AKTUELLES PASSWORT* </label>
       <div class="col-sm-4">
         <input type="password" class="form-control" id="inputFeld1">
       </div>
     </div>
   </div>
+  <!--Eingabefeld neues Passwort-->
   <div align="center">
-    <button type="button" class="btn btn-primary" id="PWaendern">LÖSCHEN</button>
+    <div class="form-group">
+      <label for="password" class="col-sm-4 control-label" id="Label2">NEUES PASSWORT* </label>
+      <div class="col-sm-4">
+        <input type="password" class="form-control" id="inputFeld2">
+      </div>
+    </div>
+  </div>
+  <!--Eingabefeld Passwort bestätigen-->
+  <div align="center">
+    <div class="form-group">
+      <label for="eingabefeldPasswortBestätigen" class="col-sm-4 control-label" id="Label3">PASSWORT BESTÄTIGUNG*</label>
+      <div class="col-sm-4">
+        <input type="password" class="form-control" id="inputFeld3">
+      </div>
+    </div>
+  </div>
+  <div align="center">
+    <button type="button" class="btn btn-primary" id="PWaendern">ÄNDERN</button>
   </div>
   </div>
 </form>
