--- a/src/app/changeprofilepicture/changeprofilepicture.component.css
+++ b/src/app/changeprofilepicture/changeprofilepicture.component.css
@@ -33,6 +33,13 @@
   border-style: none;
 }
 
+
+/*@media (max-width: 767ox) {
+  #speichern {
+    margin-top: 10px;
+  }
+}*/
+
 #pic1, #pic2, #pic3, #pic4, #pic5, #pic6 {
   display: inline-block;
   margin-top: 20px;
