--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -18,6 +18,12 @@
             <img alt="chapterOverview" src="images-master/chapterOverview-inactive.png">
           </a>
           <ul class="dropdown-menu scrollable-menu" id="chapterOverview">
+            <li class="liste">
+              <a href="#"><img alt="confirmation" src="images-master/confirmation.png">
+                CHECK! KOMPETENZENLISTE
+              </a>
+            </li>
+            <div id = "insert"></div>
             <!--<li class="liste">
               <a href="#"><img alt="confirmation" src="images-master/confirmation.png">CHECK! KOMPETENZENLISTE</a>
             </li>
@@ -85,7 +91,8 @@
             <li role="separator" class="divider"></li>
             <li class="liste"><a href="#">ALLE KOMPETENZEN!</a></li>
             <li role="separator" class="divider"></li>
-            <li class="liste"><a href="#">DAS BIN ICH</a></li>
+            <div id="insert2" ></div>
+            <!--<li class="liste"><a href="#">DAS BIN ICH</a></li>
             <li role="separator" class="divider"></li>
             <li class="liste"><a href="#">ICH UND DIE ANDEREN</a></li>
             <li role="separator" class="divider"></li>
@@ -115,7 +122,7 @@
             <li role="separator" class="divider"></li>
             <li class="liste"><a href="#">ZÄHLEN UND RECHNEN</a></li>
             <li role="separator" class="divider"></li>
-            <li class="liste"><a href="#">FORM UND RAUM ENTDECKEN</a></li>
+            <li class="liste"><a href="#">FORM UND RAUM ENTDECKEN</a></li>-->
           </ul>
         </li>
 
